--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ ul{
 }
 
 nav{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(99, 65, 43);
 }
 
 a{
@@ -21,9 +21,9 @@ a{
     text-decoration: none;
 }
 
-a:hover{ /*Quand mon curseur survol l'élément*/
-    background-color: rgb(49, 48, 48);
-    color: darkgrey;
+a:hover:not(#haut){ /*Quand mon curseur survol l'élément*/
+    background-color: rgb(173, 123, 88);
+    color: rgb(44, 10, 10);
 }
 
 body{
@@ -31,7 +31,7 @@ body{
 }
 
 header{
-    background-image:url("../IMAGES/motifs-wax-1080x675.jpg") ;
+    background-image:url("../images/motifs-wax-1080x675.jpg") ;
     height: 70vh;
     background-size:100% auto;
     display: flex;
@@ -42,6 +42,7 @@ header{
 h1, header p{
     color: rgb(255, 255, 255);
     text-align: center;
+
 }
 
 p{
@@ -134,7 +135,23 @@ input[type=submit]:hover{
 }
 
 h1,h2,h3{
-    font-family: 'Rubik Beastly' cursive;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+footer{
+    background-color: bisque;
+    padding: 50px 0;
+}
+
+footer{
+    text-align: center;
+}
+
+#haut{
+    color: rgb(99, 65, 43) ;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
 }
 
 @media(max-width: 1400px){
