--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ a{
 }
 
 a:hover:not(#haut){ /*Quand mon curseur survol l'élément*/
-    background-color: rgb(173, 123, 88);
+    background-color: rgba(216, 175, 146, 0.171);
     color: rgb(44, 10, 10);
 }
 
@@ -31,7 +31,7 @@ body{
 }
 
 header{
-    background-image:url("../images/motifs-wax-1080x675.jpg") ;
+    background-image:linear-gradient(rgba(88, 44, 7, 0),rgba(88, 44, 7, 1)), url("../images/motifs-wax-1080x675.jpg") ;
     height: 70vh;
     background-size:100% auto;
     display: flex;
@@ -40,7 +40,7 @@ header{
 }
 
 h1, header p{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-align: center;
 
 }
